1.晚上AST生成逻辑 2.完善异常处理 3.对parser逻辑进行微调 4.添加增强的布尔变量处理